--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "witpay-server",
+  "name": "witbot-server",
   "version": "1.0.0",
+  "description": "WIT Bot Webhook Server",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
-    "node-telegram-bot-api": "^0.66.0",
-    "@solana/web3.js": "^1.89.0",
-    "@solana/spl-token": "^0.3.5",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "telegraf": "^4.12.2"
   }
 }
