--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "witbot-server",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "telegraf": "^4.12.2"
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
+
 
